Fix bug: non-responsive UI for Edit entity page on small screens

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -413,15 +413,6 @@ body, main {
 }
 
 /***************************** Edit author pages ****************************/
-.related-fields {
-  border-left: 2px solid #aaa;
-  padding-left: 16px;
-}
-
-.related-fields .form-group:hover {
-  background-color: #ddd;
-}
-
 .select2-container--bootstrap4 .select2-selection {
   background-color: white !important;
 }
